package edu.fiuba.algo3.modelo;

public interface Atacable{
	void recibirDamage(int damage);
	boolean estaMuerto();
}


